index.css
@keyframes fadein {
    from {
        opacity: 0;
    }
    to {
        opacity: 0.8;
    }
}
html, body {
    height: 100%;
    width: 100%;
    margin: 0;
    font-size: 7px;
}
* {
    font-family: 'Encode Sans Semi Expanded', sans-serif;
}
body {
    display: flex;
    flex-direction: column;
}
.dark {
    background-color: #292929;
    color: white;
}
header {
    position: fixed;
    width: 100vw;
    z-index: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
}
#title {
    display: flex;
    justify-content: center;
    width: 100%;
    padding: 1em;
    opacity: 0.9;
}
h1 {
    font-size: 6.9vw;
    margin: 0;
    letter-spacing: 0.2em;
    font-variant: small-caps;
}
#subhead {
    display: flex;
    flex-direction: column;
    align-items: center;
}
nav {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    background: linear-gradient(45deg, transparent 35px, #222 35px), linear-gradient(315deg, transparent 35px, #222 35px);
    background-size: 51%, 51%;
    background-position: bottom left, bottom right;
    background-repeat: no-repeat;
    padding: 0.5em 2em;
    opacity: 0.8;
    
    animation-duration: 3000ms;
    animation-name: fadein;
}
nav > div {
    margin: 6px 4vw;
    display: flex;
}
nav > div > div {
    display: flex;
    flex-direction: column;
    align-items: center;
    cursor: pointer;
}
nav h2, nav a {
    font-family: 'Montserrat', sans-serif;
    letter-spacing: 2px;
    margin: 0;
    font-size: 2em;
    text-decoration: none;
    color: white;
    font-weight: 700;
}
.underline {
    margin-top: 0.4em;
    height: 0.25em;
    width: 0;
    transition: width 600ms ease-in-out;
    background-color:hsl(0, 0%, 65%);
}
#contact > a {
    margin-left:8px;
    font-size:2.2em;
}
#timeline {
    display: flex;
    width: 70%;
    height: 2em;
    padding: 0.8em 1.2em;
    border-radius: 1em;
    margin-top: 1.6em;
    opacity: 0;
    transition: opacity 500ms;
}
#timeline.ready {
    opacity: 0.8;
}
#min-year, #max-year {
    font-family: 'Montserrat', sans-serif;
    margin: 0;
    font-size: 1.6em;
    font-weight: 600;
    letter-spacing: 0.8px;
}
#timeline > div {
    flex: 1 1 auto;
    margin: 0 1.5em;
    height: 2em;
}
#timeline > div > div {
    display: inline-block;
    height: 2em;
    background-color: white;
}
@media (min-width: 406px) {
    h1 {
        font-size: 4em;
    }
}
@media (max-width: 900px) {
    nav {
        background: #222;
        width: 100vw;
    }
    #timeline {
        width: 85vw;
    }
}
#map {
    flex: 1 1 auto;
    background-color: black;
    filter: brightness(0);
    transition: filter 1.5s;
}
#map.visible {
    filter: brightness(1);
}

